// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions when controls are visible on desktop browsers matches snapshot 1`] = `
<Actions
  mapSvg={<svg />}
  onClearSelection={[MockFunction]}
  ranges={Array []}
  showControls={true}
  showLegend={true}
>
  <div
    style={
      Object {
        "alignItems": "flex-start",
        "bottom": 10,
        "display": "flex",
        "fontSize": "0.75em",
        "justifyContent": "space-between",
        "left": 10,
        "maxWidth": "100%",
        "opacity": 0.9,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 10,
        "top": 10,
        "whiteSpace": "nowrap",
      }
    }
  >
    <default_1>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "border": "2px solid lightgray",
            "borderRadius": 5,
            "display": "flex",
            "pointerEvents": "all",
          }
        }
      >
        <Button
          data-custom-at="right"
          data-rh="Default"
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f067",
                "M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z",
              ],
              "iconName": "plus",
              "prefix": "fas",
            }
          }
          isMobile={false}
          name="zoom-in"
          onClick={[Function]}
          style={
            Object {
              "borderRight": "2px solid lightgray",
            }
          }
        >
          <div
            data-custom-at="right"
            data-rh="Default"
            name="zoom-in"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": 0,
                "borderRight": "2px solid lightgray",
                "cursor": "pointer",
                "display": "flex",
                "justifyContent": "center",
                "outline": "none",
                "padding": "0.5em 1em",
              }
            }
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    448,
                    512,
                    Array [],
                    "f067",
                    "M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z",
                  ],
                  "iconName": "plus",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              style={Object {}}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-plus fa-w-14 "
                data-icon="plus"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
          </div>
        </Button>
        <Button
          icon={
            Object {
              "icon": Array [
                448,
                512,
                Array [],
                "f068",
                "M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z",
              ],
              "iconName": "minus",
              "prefix": "fas",
            }
          }
          isMobile={false}
          name="zoom-out"
          onClick={[Function]}
          style={
            Object {
              "borderRight": "2px solid lightgray",
            }
          }
        >
          <div
            name="zoom-out"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": 0,
                "borderRight": "2px solid lightgray",
                "cursor": "pointer",
                "display": "flex",
                "justifyContent": "center",
                "outline": "none",
                "padding": "0.5em 1em",
              }
            }
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    448,
                    512,
                    Array [],
                    "f068",
                    "M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z",
                  ],
                  "iconName": "minus",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              style={Object {}}
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-minus fa-w-14 "
                data-icon="minus"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
          </div>
        </Button>
        <Button
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f2ea",
                "M255.545 8c-66.269.119-126.438 26.233-170.86 68.685L48.971 40.971C33.851 25.851 8 36.559 8 57.941V192c0 13.255 10.745 24 24 24h134.059c21.382 0 32.09-25.851 16.971-40.971l-41.75-41.75c30.864-28.899 70.801-44.907 113.23-45.273 92.398-.798 170.283 73.977 169.484 169.442C423.236 348.009 349.816 424 256 424c-41.127 0-79.997-14.678-110.63-41.556-4.743-4.161-11.906-3.908-16.368.553L89.34 422.659c-4.872 4.872-4.631 12.815.482 17.433C133.798 479.813 192.074 504 256 504c136.966 0 247.999-111.033 248-247.998C504.001 119.193 392.354 7.755 255.545 8z",
              ],
              "iconName": "undo-alt",
              "prefix": "fas",
            }
          }
          isMobile={false}
          name="reset-zoom"
          onClick={[Function]}
          style={
            Object {
              "borderRight": "2px solid lightgray",
            }
          }
          text="Reset Zoom"
        >
          <div
            name="reset-zoom"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": 0,
                "borderRight": "2px solid lightgray",
                "cursor": "pointer",
                "display": "flex",
                "justifyContent": "center",
                "outline": "none",
                "padding": "0.5em 1em",
              }
            }
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f2ea",
                    "M255.545 8c-66.269.119-126.438 26.233-170.86 68.685L48.971 40.971C33.851 25.851 8 36.559 8 57.941V192c0 13.255 10.745 24 24 24h134.059c21.382 0 32.09-25.851 16.971-40.971l-41.75-41.75c30.864-28.899 70.801-44.907 113.23-45.273 92.398-.798 170.283 73.977 169.484 169.442C423.236 348.009 349.816 424 256 424c-41.127 0-79.997-14.678-110.63-41.556-4.743-4.161-11.906-3.908-16.368.553L89.34 422.659c-4.872 4.872-4.631 12.815.482 17.433C133.798 479.813 192.074 504 256 504c136.966 0 247.999-111.033 248-247.998C504.001 119.193 392.354 7.755 255.545 8z",
                  ],
                  "iconName": "undo-alt",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              style={
                Object {
                  "marginRight": 8,
                }
              }
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-undo-alt fa-w-16 "
                data-icon="undo-alt"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={
                  Object {
                    "marginRight": 8,
                  }
                }
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M255.545 8c-66.269.119-126.438 26.233-170.86 68.685L48.971 40.971C33.851 25.851 8 36.559 8 57.941V192c0 13.255 10.745 24 24 24h134.059c21.382 0 32.09-25.851 16.971-40.971l-41.75-41.75c30.864-28.899 70.801-44.907 113.23-45.273 92.398-.798 170.283 73.977 169.484 169.442C423.236 348.009 349.816 424 256 424c-41.127 0-79.997-14.678-110.63-41.556-4.743-4.161-11.906-3.908-16.368.553L89.34 422.659c-4.872 4.872-4.631 12.815.482 17.433C133.798 479.813 192.074 504 256 504c136.966 0 247.999-111.033 248-247.998C504.001 119.193 392.354 7.755 255.545 8z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
            Reset Zoom
          </div>
        </Button>
        <Button
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f057",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
              ],
              "iconName": "times-circle",
              "prefix": "fas",
            }
          }
          isMobile={false}
          name="clear-selection"
          onClick={[Function]}
          style={
            Object {
              "borderRight": undefined,
            }
          }
          text="Clear All"
        >
          <div
            name="clear-selection"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": 0,
                "borderRight": undefined,
                "cursor": "pointer",
                "display": "flex",
                "justifyContent": "center",
                "outline": "none",
                "padding": "0.5em 1em",
              }
            }
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f057",
                    "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
                  ],
                  "iconName": "times-circle",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              style={
                Object {
                  "marginRight": 8,
                }
              }
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-times-circle fa-w-16 "
                data-icon="times-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={
                  Object {
                    "marginRight": 8,
                  }
                }
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
            Clear All
          </div>
        </Button>
      </div>
    </default_1>
    <default_1>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "border": "2px solid lightgray",
            "borderRadius": 5,
            "display": "flex",
            "pointerEvents": "all",
          }
        }
      >
        <Legend
          isMobile={false}
          ranges={Array []}
          style={Object {}}
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <Button
              icon={
                Object {
                  "icon": Array [
                    448,
                    512,
                    Array [],
                    "f078",
                    "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                  ],
                  "iconName": "chevron-down",
                  "prefix": "fas",
                }
              }
              isMobile={false}
              onClick={[Function]}
              text="Show Map Legend"
            >
              <div
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "border": "none",
                    "borderRadius": 0,
                    "cursor": "pointer",
                    "display": "flex",
                    "justifyContent": "center",
                    "outline": "none",
                    "padding": "0.5em 1em",
                  }
                }
              >
                <FontAwesomeIcon
                  border={false}
                  className=""
                  fixedWidth={false}
                  flip={null}
                  icon={
                    Object {
                      "icon": Array [
                        448,
                        512,
                        Array [],
                        "f078",
                        "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                      ],
                      "iconName": "chevron-down",
                      "prefix": "fas",
                    }
                  }
                  inverse={false}
                  listItem={false}
                  mask={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  style={
                    Object {
                      "marginRight": 8,
                    }
                  }
                  symbol={false}
                  title=""
                  transform={null}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-chevron-down fa-w-14 "
                    data-icon="chevron-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={
                      Object {
                        "marginRight": 8,
                      }
                    }
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </FontAwesomeIcon>
                Show Map Legend
              </div>
            </Button>
          </div>
        </Legend>
      </div>
    </default_1>
  </div>
</Actions>
`;

exports[`Actions when controls are visible on mobile browsers matches snapshot 1`] = `
<Actions
  mapSvg={<svg />}
  onClearSelection={[MockFunction]}
  ranges={Array []}
  showControls={true}
  showLegend={true}
>
  <div
    style={
      Object {
        "alignItems": "flex-start",
        "bottom": 0,
        "display": "flex",
        "fontSize": "0.75em",
        "justifyContent": "space-between",
        "left": 0,
        "maxWidth": "100%",
        "opacity": 0.9,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "whiteSpace": "nowrap",
      }
    }
  >
    <default_1>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "border": "2px solid lightgray",
            "borderRadius": 5,
            "display": "flex",
            "pointerEvents": "all",
          }
        }
      >
        <Button
          icon={
            Object {
              "icon": Array [
                512,
                512,
                Array [],
                "f057",
                "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
              ],
              "iconName": "times-circle",
              "prefix": "fas",
            }
          }
          isMobile={true}
          name="clear-selection"
          onClick={[Function]}
          style={
            Object {
              "borderRight": "2px solid lightgray",
            }
          }
          text="Clear"
        >
          <div
            name="clear-selection"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "border": "none",
                "borderRadius": 0,
                "borderRight": "2px solid lightgray",
                "cursor": "pointer",
                "display": "flex",
                "justifyContent": "center",
                "outline": "none",
                "padding": "0.25em 0.5em",
              }
            }
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f057",
                    "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z",
                  ],
                  "iconName": "times-circle",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              style={
                Object {
                  "marginRight": 4,
                }
              }
              symbol={false}
              title=""
              transform={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-times-circle fa-w-16 "
                data-icon="times-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={
                  Object {
                    "marginRight": 4,
                  }
                }
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </FontAwesomeIcon>
            Clear
          </div>
        </Button>
        <Legend
          isMobile={true}
          ranges={Array []}
          style={Object {}}
        >
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <Button
              icon={
                Object {
                  "icon": Array [
                    448,
                    512,
                    Array [],
                    "f078",
                    "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                  ],
                  "iconName": "chevron-down",
                  "prefix": "fas",
                }
              }
              isMobile={true}
              onClick={[Function]}
              text="Show Map Legend"
            >
              <div
                onClick={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "border": "none",
                    "borderRadius": 0,
                    "cursor": "pointer",
                    "display": "flex",
                    "justifyContent": "center",
                    "outline": "none",
                    "padding": "0.25em 0.5em",
                  }
                }
              >
                <FontAwesomeIcon
                  border={false}
                  className=""
                  fixedWidth={false}
                  flip={null}
                  icon={
                    Object {
                      "icon": Array [
                        448,
                        512,
                        Array [],
                        "f078",
                        "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                      ],
                      "iconName": "chevron-down",
                      "prefix": "fas",
                    }
                  }
                  inverse={false}
                  listItem={false}
                  mask={null}
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size={null}
                  spin={false}
                  style={
                    Object {
                      "marginRight": 4,
                    }
                  }
                  symbol={false}
                  title=""
                  transform={null}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-chevron-down fa-w-14 "
                    data-icon="chevron-down"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={
                      Object {
                        "marginRight": 4,
                      }
                    }
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </FontAwesomeIcon>
                Show Map Legend
              </div>
            </Button>
          </div>
        </Legend>
      </div>
    </default_1>
  </div>
</Actions>
`;
